<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_edit"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_edit"
        android:layout_marginTop="28dp"
        android:text="@string/department"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/department"
        android:layout_alignStart="@+id/department"
        android:layout_below="@+id/department"
        android:layout_marginTop="38dp">

        <RadioButton
            android:id="@+id/sis_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sis_edit" />

        <RadioButton
            android:id="@+id/cs_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cs_edit" />

        <RadioButton
            android:id="@+id/bio_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bio_edit" />

        <RadioButton
            android:id="@+id/others_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/others_edit" />
    </RadioGroup>

    <TextView
        android:id="@+id/current_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mood_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:text="@string/current_mood"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/mood_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit_main"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <Button
        android:id="@+id/submit_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/submit_third" />


    <TextView
        android:id="@+id/edit_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="Edit Information"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>