<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/student_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/student_information"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/name_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/student_information"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="33dp"
        android:text="@string/name_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/email_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name_dis"
        android:layout_alignRight="@+id/name_dis"
        android:layout_below="@+id/name_dis"
        android:layout_marginTop="37dp"
        android:text="@string/email_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/department_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_dis"
        android:layout_alignStart="@+id/name_dis"
        android:layout_below="@+id/email_dis"
        android:layout_marginTop="40dp"
        android:text="@string/department_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mood_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/department_dis"
        android:layout_alignStart="@+id/department_dis"
        android:layout_below="@+id/department_dis"
        android:layout_marginTop="38dp"
        android:text="@string/mood_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_dis"
        android:layout_alignBottom="@+id/name_dis"
        android:layout_toEndOf="@+id/department_dis"
        android:layout_toRightOf="@+id/department_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/email_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/department_dis"
        android:layout_alignLeft="@+id/name_val"
        android:layout_alignStart="@+id/name_val"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dept_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/department_dis"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mood_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mood_dis"
        android:layout_alignLeft="@+id/dept_val"
        android:layout_alignStart="@+id/dept_val"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/name_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/name_val"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:srcCompat="@drawable/edit" />

    <ImageView
        android:id="@+id/email_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/email_val"
        android:layout_alignLeft="@+id/name_img"
        android:layout_alignStart="@+id/name_img"
        app:srcCompat="@drawable/edit" />

    <ImageView
        android:id="@+id/dept_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/dept_val"
        android:layout_alignEnd="@+id/email_img"
        android:layout_alignRight="@+id/email_img"
        app:srcCompat="@drawable/edit" />

    <ImageView
        android:id="@+id/mood_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/dept_img"
        android:layout_alignStart="@+id/dept_img"
        android:layout_alignTop="@+id/mood_val"
        app:srcCompat="@drawable/edit" />
</RelativeLayout>